--- a/Prog-Web/TestProject/src/main/webapp/WEB-INF/web.xml
+++ b/Prog-Web/TestProject/src/main/webapp/WEB-INF/web.xml
@@ -17,4 +17,12 @@
   	<servlet-name>LoginServlet</servlet-name>
   	<url-pattern>/</url-pattern>
   </servlet-mapping>
+  <servlet>
+  	<servlet-name>LogoutServlet</servlet-name>
+  	<servlet-class>LogoutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>LogoutServlet</servlet-name>
+  	<url-pattern>/LogoutServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
