--- a/Prog-Web/TestProject/src/main/webapp/WEB-INF/web.xml
+++ b/Prog-Web/TestProject/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
   </servlet>
   <servlet-mapping>
   	<servlet-name>LoginServlet</servlet-name>
-  	<url-pattern>/</url-pattern>
+  	<url-pattern>/LoginServlet</url-pattern>
   </servlet-mapping>
   <servlet>
   	<servlet-name>LogoutServlet</servlet-name>
